# Minato-Intelligent-Inventory

./: battery.xlsx  chassis.xlsx  excel_processor.py  invoiceGen.py  main.py  output.docx  output_invoice.docx  pyproject.toml  sales.xlsx  serverTest.py  template.docx  test.py  testHash.py  testScan.html  user_actions.json
Data/001 Nandu Singh_687480874343/: Login.txt
Data/002 Hasina Bibi - CLOSED_848044161342/: Banking Details.txt
Data/003 Md Afzal/: Detail.txt
Data/006 Md Zahid/: Kotak Mahindra Bank.txt  PROOF.docx  Zahid.txt
Data/007 Md Sajid Ansari/: Details.txt  IOB EMAIL ID.docx  PassportphotoSajid.docx
Data/009 Akbari Khatun - CLOSED/: AkbariKhatunPassport.pdf.docx  Bank Details.txt
Data/010 Md Chand_846671159344/: DETAIL.txt
Data/011 Shakun Mali_854974343822/: DETAIL.txt
Data/012 Kajal Das - CLOSED/: Bank.txt
Data/013 Utpal Das/: BANK.txt
Data/014 Md Kalim_758781500040/: Bank Account.txt
generated_invoices/: Bill_HASINA_BIBI_20250620_BILL_2025_0020.docx  Bill_Shridam_Ghosh_20250615_BILL_2025_0004.docx  Bill_Shridam_Ghosh_20250615_BILL_2025_0005.docx  Bill_Shridam_Ghosh_20250615_BILL_2025_0006.docx  Bill_Shridam_Ghosh_20250617_BILL_2025_0018.docx  Bill_Shridam_Ghosh_20250618_BILL_2025_0019.docx  Invoice_Shridam_Ghosh_INV-20250614210217.docx  Invoice_Shridam_Ghosh_INV-20250614210518.docx  Invoice_Shridam_Ghosh_INV-20250614231154.docx  ~$voice_Shridam_Ghosh_INV-20250614231154.docx
static/: dashboard.css  dashboard.html  dashboard.js  index.html  login.html  script.js  style.css
templates/: template - Copy.docx  template.docx
(+119 files in other folders)
