[project]
name = "minato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.0",
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.0",
    "fastapi>=0.115.12",
    "google-genai>=1.20.0",
    "jinja2>=3.1.6",
    "jwt>=1.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pyjwt==2.8.0",
    "python-docx>=1.1.2",
    "python-jwt>=4.1.0",
    "setuptools<81",
    "uvicorn>=0.34.3",
]
